客户端动画配置管理系统打底（未实现功能，仅配置项与游戏内配置界面构建）

--- a/src/main/resources/assets/gd656killicon/lang/en_us.json
+++ b/src/main/resources/assets/gd656killicon/lang/en_us.json
@@ -98,13 +98,13 @@
   "gd656killicon.client.gui.config.generic.color_text_t": "T Text Color",
   "gd656killicon.client.gui.config.generic.current_element": "Current Element:",
   "gd656killicon.client.gui.config.generic.current_preset": "Current Preset:",
+  "gd656killicon.client.gui.config.element.title": "Element Configuration",
   "gd656killicon.client.gui.config.generic.display_duration": "Display Duration",
   "gd656killicon.client.gui.config.generic.display_interval_ms": "Display Interval (ms)",
   "gd656killicon.client.gui.config.generic.dynamic_card_style": "Dynamic Card Style",
   "gd656killicon.client.gui.config.generic.enable_digital_scroll": "Number Scroll",
   "gd656killicon.client.gui.config.generic.enable_flash": "Enable Flash",
   "gd656killicon.client.gui.config.generic.enable_glow_effect": "Glow Effect",
-  "gd656killicon.client.gui.config.generic.enable_icon_animation": "Enable Icon Animation",
   "gd656killicon.client.gui.config.generic.enable_icon_effect": "Icon Effects",
   "gd656killicon.client.gui.config.generic.enable_kill_feed": "Enable Kill Feed",
   "gd656killicon.client.gui.config.generic.enable_number_segmentation": "Number Separation",
@@ -162,13 +162,6 @@
   "gd656killicon.client.gui.config.generic.format_slay_the_leader": "Leader Kill Format",
   "gd656killicon.client.gui.config.generic.format_valiant": "Valiant Format",
   "gd656killicon.client.gui.config.generic.glow_intensity": "Glow Intensity",
-  "gd656killicon.client.gui.config.generic.icon_animation_frames": "Animation Frames",
-  "gd656killicon.client.gui.config.generic.icon_animation_loop": "Loop Animation",
-  "gd656killicon.client.gui.config.generic.icon_animation_orientation": "Animation Orientation",
-  "gd656killicon.client.gui.config.generic.icon_animation_style": "Animation Style",
-  "gd656killicon.client.gui.config.generic.icon_frame_duration": "Frame Duration (ms)",
-  "gd656killicon.client.gui.config.generic.icon_frame_height_ratio": "Frame Height Ratio",
-  "gd656killicon.client.gui.config.generic.icon_frame_width_ratio": "Frame Width Ratio",
   "gd656killicon.client.gui.config.generic.icon_spacing": "Icon Spacing",
   "gd656killicon.client.gui.config.generic.kill_bonus_scale": "Kill Bonus Scale",
   "gd656killicon.client.gui.config.generic.kill_feed_format": "Kill Feed Format",
@@ -198,14 +191,6 @@
   "gd656killicon.client.gui.config.generic.visible": "Show",
   "gd656killicon.client.gui.config.generic.x_offset": "X Offset",
   "gd656killicon.client.gui.config.generic.y_offset": "Y Offset",
-  "gd656killicon.config.desc.enable_icon_animation": "Enable animated icons for this element.",
-  "gd656killicon.config.desc.icon_animation_frames": "Total number of frames in the animation.",
-  "gd656killicon.config.desc.icon_frame_height_ratio": "Height ratio of a single frame relative to the texture.",
-  "gd656killicon.config.desc.icon_frame_width_ratio": "Width ratio of a single frame relative to the texture.",
-  "gd656killicon.config.desc.icon_animation_orientation": "Direction of frames in the texture sheet.",
-  "gd656killicon.config.desc.icon_frame_duration": "Display duration for each frame in milliseconds.",
-  "gd656killicon.config.desc.icon_animation_loop": "Whether the animation should loop continuously.",
-  "gd656killicon.config.desc.icon_animation_style": "Playback style of the animation.",
   "gd656killicon.client.command.create_success": "Preset %s created",
   "gd656killicon.client.command.global_config_invalid_key": "Invalid global config key: %s",
   "gd656killicon.client.command.global_config_invalid_value": "Invalid config value: %s",
@@ -425,5 +410,56 @@
   "gd656killicon.client.gui.config.exit_dialog.exit_no_save": "Exit without saving",
   "gd656killicon.client.gui.config.exit_dialog.return": "Return to config",
   "gd656killicon.client.gui.config.exit_dialog.save_exit": "Save & Exit",
-  "gd656killicon.client.score_subtitle.invalid_color": "Invalid color format: %s"
+  "gd656killicon.client.score_subtitle.invalid_color": "Invalid color format: %s",
+  "gd656killicon.client.gui.config.tab.general": "General",
+  "gd656killicon.client.gui.config.tab.texture.default": "Default Texture",
+  "gd656killicon.client.gui.config.tab.texture.headshot": "Headshot Texture",
+  "gd656killicon.client.gui.config.tab.texture.explosion": "Explosion Texture",
+  "gd656killicon.client.gui.config.tab.texture.crit": "Critical Texture",
+  "gd656killicon.client.gui.config.tab.texture.destroy_vehicle": "Vehicle Destroy Texture",
+  "gd656killicon.client.gui.config.tab.texture.assist": "Assist Texture",
+  "gd656killicon.client.gui.config.tab.texture.combo_1": "Combo 1 Texture",
+  "gd656killicon.client.gui.config.tab.texture.combo_2": "Combo 2 Texture",
+  "gd656killicon.client.gui.config.tab.texture.combo_3": "Combo 3 Texture",
+  "gd656killicon.client.gui.config.tab.texture.combo_4": "Combo 4 Texture",
+  "gd656killicon.client.gui.config.tab.texture.combo_5": "Combo 5 Texture",
+  "gd656killicon.client.gui.config.tab.texture.combo_6": "Combo 6 Texture",
+  "gd656killicon.client.gui.config.tab.texture.default_ct": "Default CT Texture",
+  "gd656killicon.client.gui.config.tab.texture.default_t": "Default T Texture",
+  "gd656killicon.client.gui.config.tab.texture.headshot_ct": "Headshot CT Texture",
+  "gd656killicon.client.gui.config.tab.texture.headshot_t": "Headshot T Texture",
+  "gd656killicon.client.gui.config.tab.texture.explosion_ct": "Explosion CT Texture",
+  "gd656killicon.client.gui.config.tab.texture.explosion_t": "Explosion T Texture",
+  "gd656killicon.client.gui.config.tab.texture.crit_ct": "Critical CT Texture",
+  "gd656killicon.client.gui.config.tab.texture.crit_t": "Critical T Texture",
+  "gd656killicon.client.gui.config.tab.texture.light_ct": "Light CT Texture",
+  "gd656killicon.client.gui.config.tab.texture.light_t": "Light T Texture",
+  "gd656killicon.client.gui.config.tab.texture.bar_ct": "CT Bar Texture",
+  "gd656killicon.client.gui.config.tab.texture.bar_t": "T Bar Texture",
+  
+  "gd656killicon.client.gui.config.generic.icon_size": "Icon Size",
+  "gd656killicon.client.gui.config.generic.border_size": "Border Size",
+  "gd656killicon.client.gui.config.generic.background_color": "Background Color",
+  "gd656killicon.client.gui.config.generic.icon_box_opacity": "Icon Box Opacity",
+  "gd656killicon.client.gui.config.generic.text_box_opacity": "Text Box Opacity",
+  "gd656killicon.client.gui.config.generic.scale_weapon": "Weapon Scale",
+  "gd656killicon.client.gui.config.generic.scale_victim": "Victim Scale",
+  "gd656killicon.client.gui.config.generic.scale_health": "Health Scale",
+  "gd656killicon.client.gui.config.generic.color_victim": "Victim Color",
+
+  "gd656killicon.client.gui.config.generic.enable_texture_animation": "Enable Animation",
+  "gd656killicon.client.gui.config.generic.texture_animation_total_frames": "Total Frames",
+  "gd656killicon.client.gui.config.generic.texture_animation_interval_ms": "Frame Interval (ms)",
+  "gd656killicon.client.gui.config.generic.texture_animation_orientation": "Frame Orientation",
+  "gd656killicon.client.gui.config.generic.texture_animation_loop": "Loop Animation",
+  "gd656killicon.client.gui.config.generic.texture_animation_play_style": "Play Style",
+  "gd656killicon.client.gui.config.generic.texture_frame_width_ratio": "Frame Width Ratio",
+  "gd656killicon.client.gui.config.generic.texture_frame_height_ratio": "Frame Height Ratio",
+
+  "gd656killicon.config.choice.horizontal": "Horizontal",
+  "gd656killicon.config.choice.vertical": "Vertical",
+  "gd656killicon.config.choice.sequential": "Sequential",
+  "gd656killicon.config.choice.reverse": "Reverse",
+  "gd656killicon.config.choice.pingpong": "Ping-Pong",
+  "gd656killicon.config.choice.random": "Random"
 }
