--- a/src/main/resources/assets/gd656killicon/lang/zh_cn.json
+++ b/src/main/resources/assets/gd656killicon/lang/zh_cn.json
@@ -98,13 +98,13 @@
   "gd656killicon.client.gui.config.generic.color_text_t": "T文字颜色",
   "gd656killicon.client.gui.config.generic.current_element": "当前元素：",
   "gd656killicon.client.gui.config.generic.current_preset": "当前预设：",
+  "gd656killicon.client.gui.config.element.title": "元素配置",
   "gd656killicon.client.gui.config.generic.display_duration": "显示持续时间",
   "gd656killicon.client.gui.config.generic.display_interval_ms": "显示间隔(毫秒)",
   "gd656killicon.client.gui.config.generic.dynamic_card_style": "动态卡牌风格",
   "gd656killicon.client.gui.config.generic.enable_digital_scroll": "启用数字滚动",
   "gd656killicon.client.gui.config.generic.enable_flash": "启用闪烁",
   "gd656killicon.client.gui.config.generic.enable_glow_effect": "启用发光效果",
-  "gd656killicon.client.gui.config.generic.enable_icon_animation": "启用图标材质动画",
   "gd656killicon.client.gui.config.generic.enable_icon_effect": "启用图标效果",
   "gd656killicon.client.gui.config.generic.enable_kill_feed": "启用击杀反馈",
   "gd656killicon.client.gui.config.generic.enable_number_segmentation": "启用数字分割",
@@ -162,13 +162,6 @@
   "gd656killicon.client.gui.config.generic.format_slay_the_leader": "击杀领袖格式",
   "gd656killicon.client.gui.config.generic.format_valiant": "勇猛格式",
   "gd656killicon.client.gui.config.generic.glow_intensity": "发光强度",
-  "gd656killicon.client.gui.config.generic.icon_animation_frames": "材质动画帧数",
-  "gd656killicon.client.gui.config.generic.icon_animation_loop": "材质动画循环播放",
-  "gd656killicon.client.gui.config.generic.icon_animation_orientation": "材质动画帧排序方向",
-  "gd656killicon.client.gui.config.generic.icon_animation_style": "材质动画播放样式",
-  "gd656killicon.client.gui.config.generic.icon_frame_duration": "材质动画单帧时长 (毫秒)",
-  "gd656killicon.client.gui.config.generic.icon_frame_height_ratio": "材质动画单帧高度比例",
-  "gd656killicon.client.gui.config.generic.icon_frame_width_ratio": "材质动画单帧宽度比例",
   "gd656killicon.client.gui.config.generic.icon_spacing": "图标间距",
   "gd656killicon.client.gui.config.generic.kill_bonus_scale": "击杀奖励缩放",
   "gd656killicon.client.gui.config.generic.kill_feed_format": "击杀反馈格式",
@@ -417,5 +410,56 @@
   "gd656killicon.client.gui.config.exit_dialog.exit_no_save": "退出且不保存更改",
   "gd656killicon.client.gui.config.exit_dialog.return": "返回配置界面",
   "gd656killicon.client.gui.config.exit_dialog.save_exit": "保存更改并退出",
-  "gd656killicon.client.score_subtitle.invalid_color": "无效的颜色格式: %s"
+  "gd656killicon.client.score_subtitle.invalid_color": "无效的颜色格式: %s",
+  "gd656killicon.client.gui.config.tab.general": "常规",
+  "gd656killicon.client.gui.config.tab.texture.default": "默认材质",
+  "gd656killicon.client.gui.config.tab.texture.headshot": "爆头材质",
+  "gd656killicon.client.gui.config.tab.texture.explosion": "爆炸材质",
+  "gd656killicon.client.gui.config.tab.texture.crit": "暴击材质",
+  "gd656killicon.client.gui.config.tab.texture.destroy_vehicle": "载具摧毁材质",
+  "gd656killicon.client.gui.config.tab.texture.assist": "助攻材质",
+  "gd656killicon.client.gui.config.tab.texture.combo_1": "连杀 1 材质",
+  "gd656killicon.client.gui.config.tab.texture.combo_2": "连杀 2 材质",
+  "gd656killicon.client.gui.config.tab.texture.combo_3": "连杀 3 材质",
+  "gd656killicon.client.gui.config.tab.texture.combo_4": "连杀 4 材质",
+  "gd656killicon.client.gui.config.tab.texture.combo_5": "连杀 5 材质",
+  "gd656killicon.client.gui.config.tab.texture.combo_6": "连杀 6 材质",
+  "gd656killicon.client.gui.config.tab.texture.default_ct": "默认 CT 材质",
+  "gd656killicon.client.gui.config.tab.texture.default_t": "默认 T 材质",
+  "gd656killicon.client.gui.config.tab.texture.headshot_ct": "爆头 CT 材质",
+  "gd656killicon.client.gui.config.tab.texture.headshot_t": "爆头 T 材质",
+  "gd656killicon.client.gui.config.tab.texture.explosion_ct": "爆炸 CT 材质",
+  "gd656killicon.client.gui.config.tab.texture.explosion_t": "爆炸 T 材质",
+  "gd656killicon.client.gui.config.tab.texture.crit_ct": "暴击 CT 材质",
+  "gd656killicon.client.gui.config.tab.texture.crit_t": "暴击 T 材质",
+  "gd656killicon.client.gui.config.tab.texture.light_ct": "光效 CT 材质",
+  "gd656killicon.client.gui.config.tab.texture.light_t": "光效 T 材质",
+  "gd656killicon.client.gui.config.tab.texture.bar_ct": "CT 卡片条材质",
+  "gd656killicon.client.gui.config.tab.texture.bar_t": "T 卡片条材质",
+  
+  "gd656killicon.client.gui.config.generic.icon_size": "图标尺寸",
+  "gd656killicon.client.gui.config.generic.border_size": "边框尺寸",
+  "gd656killicon.client.gui.config.generic.background_color": "背景颜色",
+  "gd656killicon.client.gui.config.generic.icon_box_opacity": "图标背景不透明度",
+  "gd656killicon.client.gui.config.generic.text_box_opacity": "文本背景不透明度",
+  "gd656killicon.client.gui.config.generic.scale_weapon": "武器缩放",
+  "gd656killicon.client.gui.config.generic.scale_victim": "受害者缩放",
+  "gd656killicon.client.gui.config.generic.scale_health": "血量缩放",
+  "gd656killicon.client.gui.config.generic.color_victim": "受害者颜色",
+
+  "gd656killicon.client.gui.config.generic.enable_texture_animation": "是否开启材质动画",
+  "gd656killicon.client.gui.config.generic.texture_animation_total_frames": "材质动画总帧数",
+  "gd656killicon.client.gui.config.generic.texture_animation_interval_ms": "帧间隔(ms)",
+  "gd656killicon.client.gui.config.generic.texture_animation_orientation": "帧排列方向",
+  "gd656killicon.client.gui.config.generic.texture_animation_loop": "是否循环播放",
+  "gd656killicon.client.gui.config.generic.texture_animation_play_style": "播放样式",
+  "gd656killicon.client.gui.config.generic.texture_frame_width_ratio": "单帧宽比",
+  "gd656killicon.client.gui.config.generic.texture_frame_height_ratio": "单帧高比",
+
+  "gd656killicon.config.choice.horizontal": "横排",
+  "gd656killicon.config.choice.vertical": "竖排",
+  "gd656killicon.config.choice.sequential": "顺序播放",
+  "gd656killicon.config.choice.reverse": "倒序播放",
+  "gd656killicon.config.choice.pingpong": "来回播放",
+  "gd656killicon.config.choice.random": "随机播放"
 }
