--- a/src/main/resources/assets/gd656killicon/lang/zh_tw.json
+++ b/src/main/resources/assets/gd656killicon/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-  "gd656killicon.client.command.info": "目前GD656Killicon 用戶端版本 v1.0.9.004 內部測試",
+  "gd656killicon.client.command.info": "目前GD656Killicon 用戶端版本: ",
   "gd656killicon.prefix": "[六五六] ",
   "gd656killicon.server.prefix": "[六五六-伺服器] ",
   "gd656killicon.client.text.bare_hand": "空手",
@@ -12,6 +12,16 @@
   "gd656killicon.client.format.crit": "你 使用 <weapon> 劈死了 <target>",
   "gd656killicon.client.format.assist": "你 助攻擊敗了 <target>",
   "gd656killicon.client.format.destroy_vehicle": "你 使用 <weapon> 摧毀了敵方裝甲 <target>",
+  "gd656killicon.client.format.preset_00006.kill_feed.normal": "你用<weapon>/淘汰\\了 <target><distance>",
+  "gd656killicon.client.format.preset_00006.kill_feed.headshot": "你用<weapon>命中頭部/淘汰\\了 <target><distance>",
+  "gd656killicon.client.format.preset_00006.kill_feed.explosion": "你用<weapon>/淘汰\\了 <target><distance>",
+  "gd656killicon.client.format.preset_00006.kill_feed.crit": "你用<weapon>/淘汰\\了 <target><distance>",
+  "gd656killicon.client.format.preset_00006.kill_feed.assist": "你/助攻\\淘汰了 <target>",
+  "gd656killicon.client.format.preset_00006.kill_feed.destroy_vehicle": "你 使用 <weapon> 摧毀了敵方裝甲 <target>",
+  "gd656killicon.client.format.preset_00006.combo.kill_single": "<combo> 淘汰",
+  "gd656killicon.client.format.preset_00006.combo.kill_multi": "<combo> 淘汰數",
+  "gd656killicon.client.format.preset_00006.combo.assist_single": "<combo> 助攻",
+  "gd656killicon.client.format.preset_00006.combo.assist_multi": "<combo> 助攻數",
   "gd656killicon.client.format.bonus_kill": "敵人擊斃 +<score>",
   "gd656killicon.client.format.bonus_damage": "擊中敵人 +<score>",
   "gd656killicon.client.format.bonus_headshot": "擊中敵人 +<score>",
@@ -32,6 +42,9 @@
   "gd656killicon.client.format.bonus_combo_7": "七星連珠 +<score>",
   "gd656killicon.client.format.bonus_combo_8": "八面威風 +<score>",
   "gd656killicon.client.format.bonus_desperate_counterattack": "絕境反擊 +<score>",
+  "gd656killicon.client.format.bonus_spotting": "索敵 +<score>",
+  "gd656killicon.client.format.bonus_spotting_kill": "標記擊殺 +<score>",
+  "gd656killicon.client.format.bonus_spotting_team_assist": "標記小隊助攻 +<score>",
   "gd656killicon.client.format.bonus_avenge": "復仇者獎勵 +<score>",
   "gd656killicon.client.format.bonus_shockwave": "衝擊波 +<score>",
   "gd656killicon.client.format.bonus_blind_kill": "無睹而中 +<score>",
@@ -61,6 +74,9 @@
   "gd656killicon.client.format.bonus_fierce": "兇狠 +<score>",
   "gd656killicon.client.format.bonus_savage": "野蠻 +<score>",
   "gd656killicon.client.format.bonus_potato_aim": "協助壓制 +<score>",
+  "gd656killicon.client.format.bonus_locked_target": "鎖定目標 +<score>",
+  "gd656killicon.client.format.bonus_charge_assault": "衝鋒陷陣 +<score>",
+  "gd656killicon.client.format.bonus_fire_suppression": "火力壓制 +<score>",
   "gd656killicon.client.format.bonus_hit_vehicle_armor": "命中裝甲 +<score>",
   "gd656killicon.client.format.bonus_destroy_vehicle": "摧毀裝甲 +<score>",
   "gd656killicon.client.format.bonus_vehicle_repair": "載具修理 +<score>",
@@ -95,6 +111,15 @@
   "gd656killicon.client.gui.config.generic.color_special_placeholder": "特殊佔位符顏色",
   "gd656killicon.client.gui.config.generic.current_element": "目前元素：",
   "gd656killicon.client.gui.config.generic.current_preset": "目前預設：",
+  "gd656killicon.client.gui.config.element.current_preset": "目前預設：",
+  "gd656killicon.client.gui.config.sound.title": "音效配置",
+  "gd656killicon.client.gui.config.sound.play": "試聽",
+  "gd656killicon.client.gui.config.sound.reset": "還原",
+  "gd656killicon.client.gui.config.preset.configure_sound": "配置目前預設的音效",
+  "gd656killicon.client.gui.prompt.sound_replace_success": "音效替換成功",
+  "gd656killicon.client.gui.prompt.sound_replace_fail": "音效替換失敗",
+  "gd656killicon.client.gui.prompt.sound_replace_select": "請先在列表中選擇要替換的音效",
+  "gd656killicon.client.gui.prompt.sound_replace_invalid": "僅支援 OGG 或 WAV 音效檔案",
   "gd656killicon.client.gui.config.generic.display_duration": "顯示持續時間",
   "gd656killicon.client.gui.config.generic.display_interval_ms": "顯示間隔(毫秒)",
   "gd656killicon.client.gui.config.generic.dynamic_card_style": "動態卡牌風格",
@@ -146,6 +171,10 @@
   "gd656killicon.client.gui.config.generic.format_normal": "普通擊殺格式",
   "gd656killicon.client.gui.config.generic.format_one_bullet_multi_kill": "一石二鳥格式",
   "gd656killicon.client.gui.config.generic.format_potato_aim": "馬槍怪格式",
+  "gd656killicon.client.gui.config.generic.format_locked_target": "鎖定目標格式",
+  "gd656killicon.client.gui.config.generic.format_spotting": "索敵格式",
+  "gd656killicon.client.gui.config.generic.format_spotting_kill": "標記擊殺格式",
+  "gd656killicon.client.gui.config.generic.format_spotting_team_assist": "標記小隊助攻格式",
   "gd656killicon.client.gui.config.generic.format_purge": "肅清格式",
   "gd656killicon.client.gui.config.generic.format_quick_switch": "快速切換格式",
   "gd656killicon.client.gui.config.generic.format_savage": "野蠻格式",
@@ -312,6 +341,8 @@
   "gd656killicon.client.gui.config.subtitle": "By Minecraft_GD656",
   "gd656killicon.client.gui.config.tab.home": "首頁",
   "gd656killicon.client.gui.config.tab.home.subtitle": "模組設定首頁",
+  "gd656killicon.client.gui.hometab.mod.spotting.name": "[ST] 索敵",
+  "gd656killicon.client.gui.hometab.mod.spotting.desc": "提供索敵標記、標記擊殺與標記小隊助攻等加分項支援。",
   "gd656killicon.client.gui.config.tab.global": "全域設定",
   "gd656killicon.client.gui.config.tab.global.subtitle": "針對全域的設定修改器",
   "gd656killicon.client.gui.config.tab.preset": "預設元素設定",
@@ -358,8 +389,14 @@
   "gd656killicon.client.gui.config.preset.no_elements": "您暫未新增任何元素",
   "gd656killicon.client.gui.config.global.enable_sound": "是否啟用模組音效",
   "gd656killicon.client.gui.config.global.enable_sound.desc": "啟用後，擊殺圖標顯示時將播放特定音效。",
+  "gd656killicon.client.gui.config.global.sound_volume": "音效音量大小",
+  "gd656killicon.client.gui.config.global.sound_volume.desc": "設定模組音效音量（0~200）。",
   "gd656killicon.client.gui.config.global.enable_bonus_message": "是否啟用加分項提示",
   "gd656killicon.client.gui.config.global.enable_bonus_message.desc": "啟用後，當觸發加分項（如爆頭、助攻等）時，將在聊天框顯示詳細資訊。",
+  "gd656killicon.client.gui.config.global.enable_ace_lag": "是否啟用ACE掃盤模擬",
+  "gd656killicon.client.gui.config.global.enable_ace_lag.desc": "啟用後，戰鬥激烈時會模擬掃盤卡頓效果（幀率降低、短暫卡死）。",
+  "gd656killicon.client.gui.config.global.enable_client_config_command": "是否啟用客戶端配置指令",
+  "gd656killicon.client.gui.config.global.enable_client_config_command.desc": "關閉後不顯示 /gd656killicon client config 及其子指令。",
   "gd656killicon.client.gui.config.preset.create_new": "建立新自訂預設",
   "gd656killicon.client.gui.config.preset.enter_edit_mode": "進入編輯預設模式",
   "gd656killicon.client.gui.config.preset.exit_edit_mode": "退出編輯預設模式",
@@ -387,5 +424,39 @@
   "gd656killicon.client.gui.config.exit_dialog.exit_no_save": "退出且不儲存更改",
   "gd656killicon.client.gui.config.exit_dialog.return": "返回設定介面",
   "gd656killicon.client.gui.config.exit_dialog.save_exit": "儲存更改並退出",
-  "gd656killicon.client.score_subtitle.invalid_color": "無效的顏色格式: %s"
+  "gd656killicon.client.score_subtitle.invalid_color": "無效的顏色格式: %s",
+  "gd656killicon.client.gui.prompt.warning": "警告",
+  "gd656killicon.client.gui.prompt.info": "提示",
+  "gd656killicon.client.gui.prompt.error": "錯誤",
+  "gd656killicon.client.gui.prompt.success": "成功",
+  "gd656killicon.client.gui.config.generic.enable_texture_animation": "是否啟用材質動畫",
+  "gd656killicon.client.gui.config.generic.texture_animation_total_frames": "材質動畫總幀數",
+  "gd656killicon.client.gui.config.generic.texture_animation_interval_ms": "幀間隔(ms)",
+  "gd656killicon.client.gui.config.generic.texture_animation_orientation": "幀排列方向",
+  "gd656killicon.client.gui.config.generic.texture_animation_loop": "是否循環播放",
+  "gd656killicon.client.gui.config.generic.texture_animation_play_style": "播放樣式",
+  "gd656killicon.client.gui.config.generic.texture_frame_width_ratio": "單幀寬比",
+  "gd656killicon.client.gui.config.generic.texture_frame_height_ratio": "單幀高比",
+  "gd656killicon.client.gui.prompt.texture_replace_success": "材質替換成功",
+  "gd656killicon.client.gui.prompt.texture_replace_fail": "材質替換失敗",
+  "gd656killicon.client.gui.prompt.gif_import_success": "GIF匯入並轉換成功",
+  "gd656killicon.client.gui.prompt.gif_convert_fail": "GIF轉換失敗",
+  "gd656killicon.bonus.LOCKED_TARGET.name": "鎖定目標",
+  "gd656killicon.bonus.LOCKED_TARGET.desc": "持續與同一目標交戰一段時間後完成擊殺。",
+  "gd656killicon.bonus.CHARGE_ASSAULT.name": "衝鋒陷陣",
+  "gd656killicon.bonus.CHARGE_ASSAULT.desc": "奔跑距離累計達到1000公尺時觸發。",
+  "gd656killicon.bonus.FIRE_SUPPRESSION.name": "火力壓制",
+  "gd656killicon.bonus.FIRE_SUPPRESSION.desc": "使用TACZ槍械時，子彈路徑與非隊友生物距離小於2公尺累計15發觸發。",
+  "gd656killicon.bonus.SPOTTING.name": "索敵",
+  "gd656killicon.bonus.SPOTTING.desc": "成功標記目標時觸發，每分鐘最多生效兩次。",
+  "gd656killicon.bonus.SPOTTING_KILL.name": "標記擊殺",
+  "gd656killicon.bonus.SPOTTING_KILL.desc": "擊殺被自己標記的目標。",
+  "gd656killicon.bonus.SPOTTING_TEAM_ASSIST.name": "標記小隊助攻",
+  "gd656killicon.bonus.SPOTTING_TEAM_ASSIST.desc": "隊友擊殺被自己標記的目標。",
+  "gd656killicon.config.choice.horizontal": "橫排",
+  "gd656killicon.config.choice.vertical": "豎排",
+  "gd656killicon.config.choice.sequential": "順序播放",
+  "gd656killicon.config.choice.reverse": "倒序播放",
+  "gd656killicon.config.choice.pingpong": "來回播放",
+  "gd656killicon.config.choice.random": "隨機播放"
 }
