--- a/src/main/resources/assets/gd656killicon/lang/zh_cn.json
+++ b/src/main/resources/assets/gd656killicon/lang/zh_cn.json
@@ -82,7 +82,6 @@
   "gd656killicon.client.format.bonus_destroy_vehicle": "摧毁装甲 +<score>",
   "gd656killicon.client.format.bonus_vehicle_repair": "载具修理 +<score>",
   "gd656killicon.client.format.bonus_value_target_destroyed": "价值目标摧毁 +<score>",
-  "gd656killicon.client.format.bonus_fire_suppression": "火力压制 +<score>",
   "gd656killicon.client.format.bonus_destroy_block": "摧毁道具 +<score>",
   "gd656killicon.client.format.bonus_spotting": "索敌 +<score>",
   "gd656killicon.client.format.bonus_spotting_kill": "标记击杀 +<score>",
@@ -170,6 +169,43 @@
   "gd656killicon.client.gui.config.tab.texture.light_t": "光效 T 材质",
   "gd656killicon.client.gui.config.tab.texture.bar_ct": "CT 卡片条材质",
   "gd656killicon.client.gui.config.tab.texture.bar_t": "T 卡片条材质",
+  
+  "gd656killicon.client.gui.texture.file.killicon_scrolling_default": "普通击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_scrolling_headshot": "爆头击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_scrolling_explosion": "爆炸击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_scrolling_crit": "暴击击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_scrolling_assist": "助攻图标",
+  "gd656killicon.client.gui.texture.file.killicon_scrolling_destroyvehicle": "载具摧毁图标",
+  "gd656killicon.client.gui.texture.file.killicon_combo_1": "一连杀击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_combo_2": "二连杀击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_combo_3": "三连杀击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_combo_4": "四连杀击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_combo_5": "五连杀击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_combo_6": "六连杀击杀图标",
+  "gd656killicon.client.gui.texture.file.killicon_card_bar_ct": "CT 卡片条图标",
+  "gd656killicon.client.gui.texture.file.killicon_card_bar_t": "T 卡片条图标",
+  "gd656killicon.client.gui.texture.file.killicon_card_default_t": "默认卡片图标 T",
+  "gd656killicon.client.gui.texture.file.killicon_card_default_ct": "默认卡片图标 CT",
+  "gd656killicon.client.gui.texture.file.killicon_card_headshot_t": "爆头卡片图标 T",
+  "gd656killicon.client.gui.texture.file.killicon_card_headshot_ct": "爆头卡片图标 CT",
+  "gd656killicon.client.gui.texture.file.killicon_card_explosion_t": "爆炸卡片图标 T",
+  "gd656killicon.client.gui.texture.file.killicon_card_explosion_ct": "爆炸卡片图标 CT",
+  "gd656killicon.client.gui.texture.file.killicon_card_crit_t": "暴击卡片图标 T",
+  "gd656killicon.client.gui.texture.file.killicon_card_crit_ct": "暴击卡片图标 CT",
+  "gd656killicon.client.gui.texture.file.killicon_card_light_t": "光效卡片图标 T",
+  "gd656killicon.client.gui.texture.file.killicon_card_light_ct": "光效卡片图标 CT",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield1_default": "普通击杀图标[战地一]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield1_headshot": "爆头击杀图标[战地一]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield1_explosion": "爆炸击杀图标[战地一]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield1_crit": "暴击击杀图标[战地一]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield1_destroyvehicle": "载具摧毁图标[战地一]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield5_default": "普通击杀图标[战地五]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield5_headshot": "爆头击杀图标[战地五]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield5_assist": "助攻图标[战地五]",
+  "gd656killicon.client.gui.texture.file.killicon_battlefield5_destroyvehicle": "载具摧毁图标[战地五]",
+  "gd656killicon.client.gui.texture.file.killicon_df_default": "普通击杀图标[三角洲]",
+  "gd656killicon.client.gui.texture.file.killicon_df_headshot": "爆头击杀图标[三角洲]",
+  "gd656killicon.client.gui.texture.file.killicon_df_destroyvehicle": "载具摧毁图标[三角洲]",
 
   "gd656killicon.client.gui.config.generic.align_left": "左对齐",
   "gd656killicon.client.gui.config.generic.align_right": "右对齐",
@@ -194,14 +230,20 @@
   "gd656killicon.client.gui.config.generic.current_preset": "当前预设：",
   "gd656killicon.client.gui.config.generic.display_duration": "显示持续时间",
   "gd656killicon.client.gui.config.generic.display_interval_ms": "显示间隔(毫秒)",
-  "gd656killicon.client.gui.config.generic.dynamic_card_style": "动态卡牌风格",
+  "gd656killicon.client.gui.config.generic.dynamic_card_style": "根据队伍颜色动态变更卡牌样式",
+  "gd656killicon.client.gui.config.generic.texture_style": "材质样式",
   "gd656killicon.client.gui.config.generic.enable_digital_scroll": "启用数字滚动",
   "gd656killicon.client.gui.config.generic.enable_flash": "启用闪烁",
   "gd656killicon.client.gui.config.generic.enable_glow_effect": "启用发光效果",
-  "gd656killicon.client.gui.config.generic.enable_icon_effect": "启用图标效果",
-  "gd656killicon.client.gui.config.generic.ring_effect_normal_color": "默认光环颜色",
-  "gd656killicon.client.gui.config.generic.ring_effect_normal_radius": "默认光环最大半径",
-  "gd656killicon.client.gui.config.generic.ring_effect_normal_thickness": "默认光环粗细",
+  "gd656killicon.client.gui.config.generic.enable_ring_effect_crit": "启用暴击光环",
+  "gd656killicon.client.gui.config.generic.enable_ring_effect_headshot": "启用爆头光环",
+  "gd656killicon.client.gui.config.generic.enable_ring_effect_explosion": "启用爆炸光环",
+  "gd656killicon.client.gui.config.generic.ring_effect_crit_color": "暴击光环颜色",
+  "gd656killicon.client.gui.config.generic.ring_effect_crit_radius": "暴击光环最大半径",
+  "gd656killicon.client.gui.config.generic.ring_effect_crit_thickness": "暴击光环粗细",
+  "gd656killicon.client.gui.config.generic.ring_effect_normal_color": "暴击光环颜色",
+  "gd656killicon.client.gui.config.generic.ring_effect_normal_radius": "暴击光环最大半径",
+  "gd656killicon.client.gui.config.generic.ring_effect_normal_thickness": "暴击光环粗细",
   "gd656killicon.client.gui.config.generic.ring_effect_headshot_color": "爆头光环颜色",
   "gd656killicon.client.gui.config.generic.ring_effect_headshot_radius": "爆头光环最大半径",
   "gd656killicon.client.gui.config.generic.ring_effect_headshot_thickness": "爆头光环粗细",
@@ -376,6 +418,8 @@
   "gd656killicon.client.gui.config.preset.official.00004": "Battlefield 1模式",
   "gd656killicon.client.gui.config.preset.official.00005": "Battlefield 4模式",
   "gd656killicon.client.gui.config.preset.official.00006": "PUBG淘汰字幕模式",
+  "gd656killicon.client.gui.config.preset.official.00007": "Battlefield 5模式",
+  "gd656killicon.client.gui.config.preset.official.00008": "三角洲行动：全面战场模式",
   "gd656killicon.client.gui.config.preset.all_elements_added": "您已添加全部元素",
   "gd656killicon.client.gui.config.preset.configure_button": "配置",
   "gd656killicon.client.gui.config.preset.action.edit_name_tooltip": "点击以编辑配置名称",
@@ -399,6 +443,7 @@
 
   "gd656killicon.client.gui.prompt.warning": "警告",
   "gd656killicon.client.gui.prompt.info": "提示",
+  "gd656killicon.client.gui.prompt.language_changed": "检测到您更改了客户端语言，建议对文本格式类配置项进行重置",
   "gd656killicon.client.gui.prompt.error": "错误",
   "gd656killicon.client.gui.prompt.success": "成功",
   "gd656killicon.client.gui.prompt.sound_replace_success": "音效替换成功",
@@ -407,6 +452,8 @@
   "gd656killicon.client.gui.prompt.sound_replace_invalid": "仅支持 OGG 或 WAV 音频文件",
   "gd656killicon.client.gui.prompt.texture_replace_success": "材质替换成功",
   "gd656killicon.client.gui.prompt.texture_replace_fail": "材质替换失败",
+  "gd656killicon.client.gui.prompt.texture_drop_wrong_tab": "请在材质配置选项卡下拖入PNG或GIF文件来自定义材质",
+  "gd656killicon.client.gui.prompt.texture_drop_invalid": "仅支持PNG与GIF格式的标准文件",
   "gd656killicon.client.gui.prompt.gif_import_success": "GIF导入并转换成功",
   "gd656killicon.client.gui.prompt.gif_convert_fail": "GIF转换失败",
 
@@ -586,6 +633,7 @@
 
   "gd656killicon.client.gui.config.generic.color_kill_combo": "连杀字幕颜色",
   "gd656killicon.client.gui.config.generic.color_assist_combo": "助攻字幕颜色",
+  "gd656killicon.client.gui.config.generic.color_normal_text": "常规字段字幕颜色",
   "gd656killicon.client.gui.config.generic.format_kill_single": "单杀字幕格式",
   "gd656killicon.client.gui.config.generic.format_kill_multi": "多杀字幕格式",
   "gd656killicon.client.gui.config.generic.format_assist_single": "单次助攻格式",
@@ -601,6 +649,8 @@
   "gd656killicon.config.desc.combo_reset_timeout": "当选择'自定义时长'时，超过此时间未击杀/助攻将重置对应连杀数。",
   "gd656killicon.config.desc.enable_bold": "是否开启文本粗体渲染。",
   "gd656killicon.config.desc.enable_light_effect": "启用字幕入场时的光条扫描特效。",
+  "gd656killicon.config.desc.texture_style": "选择此材质选项卡使用的默认贴图。",
+  "gd656killicon.config.desc.color_normal_text": "设置非占位符等常规文本的字幕颜色。",
 
   "gd656killicon.client.gui.help.category.commands": "服务端指令",
   "gd656killicon.client.gui.help.category.bonus": "加分项说明",
