--- a/src/main/resources/assets/gd656killicon/lang/en_us.json
+++ b/src/main/resources/assets/gd656killicon/lang/en_us.json
@@ -106,12 +106,14 @@
   "gd656killicon.client.gui.hometab.mod.ywzj.name": "[YWZJ] Never Ending: Vehicles",
   "gd656killicon.client.gui.hometab.mod.ia.name": "[IA] Immersive Aircraft",
   "gd656killicon.client.gui.hometab.mod.spotting.name": "[ST] Spotting",
+  "gd656killicon.client.gui.hometab.mod.pingwheel.name": "[PW] Ping Wheel",
   "gd656killicon.client.gui.hometab.mod.lr.name": "[LR] LR Tactical Workshop",
   "gd656killicon.client.gui.hometab.mod.tacz.desc": "Provides support for headshot detection and bonuses like 'Last Round'.",
   "gd656killicon.client.gui.hometab.mod.sbw.desc": "Provides support for headshot detection, vehicle damage, vehicle destruction, vehicle repair, high-value target destruction, and other bonuses.",
   "gd656killicon.client.gui.hometab.mod.ywzj.desc": "Provides support for vehicle damage, vehicle destruction, vehicle repair, high-value target destruction, and other bonuses.",
   "gd656killicon.client.gui.hometab.mod.ia.desc": "Provides support for vehicle damage, vehicle destruction, high-value target destruction, and other bonuses.",
   "gd656killicon.client.gui.hometab.mod.spotting.desc": "Provides support for spotting marks, marked kills, and marked squad assist bonuses.",
+  "gd656killicon.client.gui.hometab.mod.pingwheel.desc": "Provides support for spotting marks, marked kills, and marked squad assist bonuses.",
   "gd656killicon.client.gui.hometab.mod.lr.desc": "Provides an extension for flashbang effects to enable the 'Blindfire' bonus detection.",
   "gd656killicon.client.gui.hometab.link.bilibili": "Developer Bilibili",
   "gd656killicon.client.gui.hometab.link.modrinth": "Mod Snapshot Releases",
