--- a/src/main/resources/assets/gd656killicon/lang/zh_cn.json
+++ b/src/main/resources/assets/gd656killicon/lang/zh_cn.json
@@ -106,12 +106,14 @@
   "gd656killicon.client.gui.hometab.mod.ywzj.name": "[YWZJ] 永无止境:载具",
   "gd656killicon.client.gui.hometab.mod.ia.name": "[IA] 沉浸式飞机",
   "gd656killicon.client.gui.hometab.mod.spotting.name": "[ST] 索敌",
+  "gd656killicon.client.gui.hometab.mod.pingwheel.name": "[PW] Ping Wheel",
   "gd656killicon.client.gui.hometab.mod.lr.name": "[LR] LR战术工坊",
   "gd656killicon.client.gui.hometab.mod.tacz.desc": "提供爆头判定及末弹酬勇等加分项支持。",
   "gd656killicon.client.gui.hometab.mod.sbw.desc": "提供爆头判定、载具伤害、载具摧毁、载具修理、价值目标摧毁等加分项支持。",
   "gd656killicon.client.gui.hometab.mod.ywzj.desc": "提供载具伤害、载具摧毁、载具修理、价值目标摧毁等加分项支持。",
   "gd656killicon.client.gui.hometab.mod.ia.desc": "提供载具伤害、载具摧毁、价值目标摧毁等加分项支持。",
   "gd656killicon.client.gui.hometab.mod.spotting.desc": "提供索敌标记、标记击杀与标记小队助攻等加分项支持。",
+  "gd656killicon.client.gui.hometab.mod.pingwheel.desc": "提供索敌标记、标记击杀与标记小队助攻等加分项支持。",
   "gd656killicon.client.gui.hometab.mod.lr.desc": "提供无赌而中加分项判定的闪光弹效果拓展",
   "gd656killicon.client.gui.hometab.link.bilibili": "开发者B站",
   "gd656killicon.client.gui.hometab.link.modrinth": "模组快照发布页",
