--- a/src/main/resources/assets/gd656killicon/lang/zh_tw.json
+++ b/src/main/resources/assets/gd656killicon/lang/zh_tw.json
@@ -106,12 +106,14 @@
   "gd656killicon.client.gui.hometab.mod.ywzj.name": "[YWZJ] 永無止境:載具",
   "gd656killicon.client.gui.hometab.mod.ia.name": "[IA] 沉浸式飛機",
   "gd656killicon.client.gui.hometab.mod.spotting.name": "[ST] 索敵",
+  "gd656killicon.client.gui.hometab.mod.pingwheel.name": "[PW] Ping Wheel",
   "gd656killicon.client.gui.hometab.mod.lr.name": "[LR] LR戰術工坊",
   "gd656killicon.client.gui.hometab.mod.tacz.desc": "提供爆頭判定及末彈酬勇等加分項支援。",
   "gd656killicon.client.gui.hometab.mod.sbw.desc": "提供爆頭判定、載具傷害、載具摧毀、載具修理、價值目標摧毀等加分項支援。",
   "gd656killicon.client.gui.hometab.mod.ywzj.desc": "提供載具傷害、載具摧毀、載具修理、價值目標摧毀等加分項支援。",
   "gd656killicon.client.gui.hometab.mod.ia.desc": "提供載具傷害、載具摧毀、價值目標摧毀等加分項支援。",
   "gd656killicon.client.gui.hometab.mod.spotting.desc": "提供索敵標記、標記擊殺與標記小隊助攻等加分項支援。",
+  "gd656killicon.client.gui.hometab.mod.pingwheel.desc": "提供索敵標記、標記擊殺與標記小隊助攻等加分項支援。",
   "gd656killicon.client.gui.hometab.mod.lr.desc": "提供無睹而中加分項判定的閃光彈效果拓展",
   "gd656killicon.client.gui.hometab.link.bilibili": "開發者B站",
   "gd656killicon.client.gui.hometab.link.modrinth": "模組快照釋出頁",
